fix transaction list spacing

--- a/components/Sidebar.module.scss
+++ b/components/Sidebar.module.scss
@@ -26,3 +26,11 @@
     align-items: center;
     justify-content: space-between;
 }
+
+.transactions>* {
+    margin-bottom: 31px;
+}
+
+.transactions>div:last-of-type {
+    margin-bottom: 0;
+}
